syntax = "proto3";

package usage;

option go_package = "proto;usage";

service Usage {
	rpc ListSamples(ListSamplesRequest) returns (ListSamplesResponse) {}
}

message Sample {
	string id = 1;
	string namespace = 2;
	int64 user_count = 3;
	int64 service_count = 4;
	int64 created = 5;
}

message ListSamplesRequest {
	// optional parameter to filter by namespace
	string namespace = 1;
}

message ListSamplesResponse {
	repeated Sample samples = 1;
}